public class Main {

    public static void main(String[] args) {

        System.out.println("Start to SP3");

        System.out.println("github check");
        System.out.println("Check 2");

        System.out.println("Lad os se om det virker");
        System.out.println("Hello world");
    }
}
